# confquery

./: CMakeLists.txt  README.md  main.cpp
